Finish project "Landing Page"
Use as many concepts as learned to master them.

Create a good structure in HTML to make it
easy to read and easy to edit or create style.

Make CSS as simple as possible.
Use classes and id's to make it easier to code.

Don't really know what to write here, but one
thing is clear: this website is usable. :)

--- a/index.html
+++ b/index.html
@@ -2,51 +2,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="body">
-        <div class="header">
-            <div class="logo">Header Logo</div>
-            <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
-            </ul>
-        </div>
-        <div class="introduction">
-            <div class="intro">
-                <div class="title">This website is awesome</div>
-                <div class="subtext">This website has some subtext that goes here under the main title.
-                    It's a smaller font and the color is lower contrast</div>
-                <div><button class="button1">Sign up</button></div>
+    <div class="container">
+    <div class="header">
+        <div class="logo">Header Logo</div>
+        <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </div>
+        <div id="body">
+            <div class="introduction">
+                <div class="intro">
+                    <div class="title">This website is awesome</div>
+                    <div class="subtextmain">This website has some subtext that goes here under the main title.
+                        It's a smaller font and the color is lower contrast</div>
+                    <button class="button">Sign up</button>
+                </div>
+                <img class="imagemain" src="#">
             </div>
-            <div class="image-main"><img src="#">this is a placeholder for an image</div>
-        </div>
-        <div class="informations">
             <div class="information">Some random information</div>
             <div class="infos">
-                <div class="info">
-                    <img src="#">
-                    <div class="image">this is some subtext under an illustration or image</div>
+                <div class="info one">
+                    <img class="image" src="#">
+                    <div class="subtext">this is some subtext under an illustration or image</div>
                 </div>
-                <div class="info">
-                    <img src="#">
-                    <div class="image">this is some subtext under an illustration or image</div>
+                <div class="info two">
+                    <img class="image" src="#">
+                    <div class="subtext">this is some subtext under an illustration or image</div>
                 </div>
-                <div class="info">
-                    <img src="#">
-                    <div class="image">this is some subtext under an illustration or image</div>
+                <div class="info three">
+                    <img class="image" src="#">
+                    <div class="subtext">this is some subtext under an illustration or image</div>
                 </div>
-                <div class="info">
-                    <img src="#">
-                    <div class="image">this is some subtext under an illustration or image</div>
+                <div class="info four">
+                    <img class="image" src="#">
+                    <div class="subtext">this is some subtext under an illustration or image</div>
                 </div>
             </div>
-        </div>
         <div class="quote-place">
             <div class="quote">This is an inspiring quote, or a testimonial from a customer.
                 Maybe it's just filling up space, or maybe people will actually read it. Who knows?
@@ -58,7 +55,8 @@
             <div class="small">Sign up for our product by clicking that button right over there!</div>
             <div class="button"><button>Sign up</button></div>
         </div>
-        <div class="footer">Copyright © The Odin Project 2022</div>
+        </div>
     </div>
+        <div class="footer">Copyright © The Odin Project 2022</div>
 </body>
 </html>
